# godot.rs

./: .gitignore  Cargo.toml
projects/game-client/: Cargo.toml  Rust.gdextension  icon.svg.import  main.tscn  project.godot
projects/game-extension/: Cargo.toml
projects/game-extension/src/: lib.rs
projects/game-extension/src/errors/: mod.rs
projects/game-extension/src/player/: mod.rs
projects/game-server/: Cargo.toml
