[package]
name = "godot_plugin"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/godot.rs"
documentation = "https://docs.rs/godot.rs"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[lib]
name = "_rs_plugin"
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
